--- a/css/resets.css
+++ b/css/resets.css
@@ -1,7 +1,7 @@
-* {
+*, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 html, body {
     height: 100%;
@@ -15,6 +15,26 @@ img, picture, video, canvas, svg {
     width: 100%;
 }
 
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+}
+table{
+    border-collapse: collapse;
+}
+textarea{
+    white-space: revert;
+}
+::placeholder{
+    color: unset;
+    font: inherit;
+}
+a, a:visited{
+    text-decoration: none;
+    color: unset;
+}
+button{
+    cursor: pointer;
+}
 .page-wrapper {
     min-height: 100vh;
     display: flex;
