--- a/css/layout-elements-exercise.css
+++ b/css/layout-elements-exercise.css
@@ -9,7 +9,7 @@
     border: none;
     border-radius: 5px;
     padding: 10px 40px;
-    box-shadow: gray;
+    box-shadow: 5px 2px 2px #696969;
     white-space: nowrap;
     text-align: center;
 }
@@ -19,6 +19,7 @@ header{
 .container.hero-scene{
     height: 80vh;
     background-color: #d7d7d7;
+    box-shadow: inset 15px -15px 400px #7e7e7e;
 }
 .hero-text{
     max-width: 500px;
@@ -32,6 +33,7 @@ header{
     height: 400px;
     background-color: gray;
     border-radius: 5px;
+    box-shadow: 10px 5px 5px #4f4f4f
 }
 .features{
     font-size: 25px;
@@ -60,6 +62,7 @@ header{
 }
 .feature-card{
     border: 1px solid #000;
+    box-shadow: 10px 5px 5px #4f4f4f;
     border-radius: 10px;
     padding: 40px;
     transition: all ease .3s;
