--- a/css/layout-elements-exercise.css
+++ b/css/layout-elements-exercise.css
@@ -6,14 +6,14 @@
 .sign-up{
     color: white;
     background-color: #989898;
-    border: none;
+    border: unset;
     border-radius: 5px;
     padding: 10px 40px;
     box-shadow: 5px 2px 2px #696969;
     white-space: nowrap;
     text-align: center;
 }
-header{
+header.container{
     margin: 20px 0px;
 }
 .container.hero-scene{
