twitter home page

--- a/css/layout.css
+++ b/css/layout.css
@@ -69,6 +69,9 @@
 .row.justify-right{
     justify-content: end;
 }
+.row.grow{
+    flex: 1 0 0;
+}
 
     /*
         The "column" is a container element that vertically separates its
