--- a/css/jquery_faq.css
+++ b/css/jquery_faq.css
@@ -19,3 +19,25 @@ dt{
     margin:30px;
     font-weight: bold;
 }
+.frame-container{
+margin-top: 20px;
+}
+
+.picture-frame{
+    width: 300px;
+    height: 200px;
+    border: 3px solid #ccc;
+    background-color: #110f0f;
+    margin: auto;
+    padding: 15px 10px;
+}
+.frame-image{
+    max-height: 100%;
+    max-width: 100%;
+}
+.swap{
+    width: 60px;
+}
+.container{
+    margin-bottom: 20px;
+}
