--- a/css/ajax-store.css
+++ b/css/ajax-store.css
@@ -1,6 +1,48 @@
-.row{
+body{
+    color: white;
+    background-color: #254343;
+}
+.header-image{
+    background-image: url("../images/header-background.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.row.header-height{
     height: 150px;
 }
+.row.body-height{
+    height: 100%;
+}
 .refresh{
-    width: 50px;
+    background: linear-gradient(to right bottom, #ffda5f, #f9376b) border-box;
+    text-transform: uppercase;
+    border: solid .25em transparent;
+    border-radius: 30px;
+    width: 100px;
+}
+table{
+    margin-top: 30px;
+    width: 100%;
+    height: 80%;
+    border: 3px #100f0f double;
+    background-color: #68797B;
+}
+th{
+    font-size: 30px;
+}
+td{
+    text-align: center;
+    font-size: 20px;
+}
+tbody tr:nth-child(odd) {
+    background-color: #b6c3c7;
+}
+
+tbody tr:nth-child(even) {
+    background-color: #d3dfe1;
+}
+th{
+    table-layout: fixed;
+    width: 100px;
+    border: 1px solid black;
 }
