--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,700;1,800&display=swap');
 body{
+    background-color: #bebebe;
     color: white;
     font-family: 'Open Sans';
     font-weight: 300;
@@ -86,6 +87,31 @@ svg.sunset{
 .sr-ss{
     position: relative;
 }
-.ext-forcast{
+.ext-forecast{
     height: 313px;
+}
+.weather-card {
+    max-width: 300px;
+    border: 1px solid #fcfcfc;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.img-wrapper img {
+    height: 200px;
+    object-fit: cover;
+    width: 100%;
+    border-bottom:1px solid #606060;
+    border-radius: 8px;
+}
+.card-bottom {
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 0 10px 10px 10px;
+}
+#map{
+    border-radius: 10px;
 }
