--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,700;1,800&display=swap');
 body{
-    background-color: #bebebe;
+    background: linear-gradient(#faf8f8 30%, #009dff 90%);
     color: white;
     font-family: 'Open Sans';
     font-weight: 300;
@@ -96,6 +96,8 @@ svg.sunset{
     height: 313px;
 }
 .weather-card {
+    box-shadow: 0 5px 20px;
+    backdrop-filter: blur(30px);
     max-width: 300px;
     border: 1px solid #fcfcfc;
     border-radius: 8px;
