--- a/css/weather-map.css
+++ b/css/weather-map.css
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,700;1,800&display=swap');
+
 body{
     color: white;
     font-family: 'Open Sans';
     font-weight: 300;
 
+}
+.weather-logo{
+    width: 20px;
+}
+h1,h2,h3,h4,h5,h6,p,a {
+    background: linear-gradient(to right, #f6f4f4, #c0c0c0);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 .current-weather-background{
 background-image: url("../images/cloudy.gif");
@@ -21,6 +30,7 @@ background-image: url("../images/cloudy.gif");
     background-color: rgba(255,0,0,0);
 }
 .row.current-weather-row{
+    gap: 0px;
     height: 120px;
 }
 .weather-summary{
@@ -69,7 +79,6 @@ svg.sunset{
     border-radius: 34px;
 }
 .inline{
-    opacity: .7;
     white-space: nowrap;
     font-size: 14px;
 }
@@ -103,10 +112,13 @@ svg.sunset{
     display: flex;
     flex-direction: column;
     gap: 10px;
+    transition: transform 0.2s ease-in-out;
 }
-
+.weather-card:hover {
+    transform: scale(1.1);
+}
 .img-wrapper img {
-    height: 200px;
+    height: 185px;
     object-fit: cover;
     width: 100%;
     border-bottom:1px solid #606060;
@@ -120,4 +132,10 @@ svg.sunset{
 }
 #map{
     border-radius: 10px;
+}
+.forecast-title{
+    font-size: 35px;
+}
+.high-low{
+    white-space: nowrap;
 }
