rotation on 3d carousel

--- a/css/movies.css
+++ b/css/movies.css
@@ -1,35 +1,41 @@
-body{
+body {
     background-color: #131520;
     color: white;
 }
-.right-arrow{
+
+.right-arrow {
     position: absolute;
     top: 132px;
     left: -459px;
     height: 146px;
 }
-.left-arrow{
+
+.left-arrow {
     position: absolute;
     top: 155px;
     left: 456px;
     height: 99px;
 }
-.hero-container{
+
+.hero-container {
     margin: 20px 0 120px 0;
     background-color: #1e2033;
     border: 4px solid white;
     border-radius: 15px;
 }
+
 .hero-scene {
     width: 800px;
     height: 400px;
     position: relative;
     perspective: 1000px;
 }
-.header-height{
+
+.header-height {
     margin: 20px;
     height: 90px;
 }
+
 .carousel {
     width: 100%;
     height: 100%;
@@ -46,87 +52,149 @@ body{
     left: 320px;
     top: 77px;
 }
-#right:hover{
+
+#right:hover {
     cursor: pointer;
 }
-#left:hover{
+
+#left:hover {
     cursor: pointer;
 }
-.carousel-cell:nth-child(1) { transform: rotateY(  0deg) translateZ(288px); }
-.carousel-cell:nth-child(2) { transform: rotateY( 40deg) translateZ(288px); }
-.carousel-cell:nth-child(3) { transform: rotateY( 80deg) translateZ(288px); }
-.carousel-cell:nth-child(4) { transform: rotateY(120deg) translateZ(288px); }
-.carousel-cell:nth-child(5) { transform: rotateY(160deg) translateZ(288px); }
-.carousel-cell:nth-child(6) { transform: rotateY(200deg) translateZ(288px); }
-.carousel-cell:nth-child(7) { transform: rotateY(240deg) translateZ(288px); }
-.carousel-cell:nth-child(8) { transform: rotateY(280deg) translateZ(288px); }
-.carousel-cell:nth-child(9) { transform: rotateY(320deg) translateZ(288px); }
-.img-wrapper{
+
+.carousel-cell:nth-child(1) {
+    transform: rotateY(0deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(2) {
+    transform: rotateY(40deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(3) {
+    transform: rotateY(80deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(4) {
+    transform: rotateY(120deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(5) {
+    transform: rotateY(160deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(6) {
+    transform: rotateY(200deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(7) {
+    transform: rotateY(240deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(8) {
+    transform: rotateY(280deg) translateZ(288px);
+}
+
+.carousel-cell:nth-child(9) {
+    transform: rotateY(320deg) translateZ(288px);
+}
+.circle-container {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flat-circle {
+    position: absolute;
+    top: 345px;
+    left: 193px;
+    width: 400px;
+    height: 26px;
+    border-radius: 50%;
+    filter: blur(5px);
+    background-color: #000000;
+}
+
+.img-wrapper {
     position: absolute;
     border: 4px solid white
 
 }
-.genre-row{
+
+.genre-row {
     height: 100px;
 }
-.movie-genre{
+
+.movie-genre {
     font-size: 23px;
     display: flex;
     align-items: center;
     justify-content: center;
     max-width: 180px;
-    min-width:180px;
+    min-width: 180px;
     max-height: 100px;
     border: 3px solid grey;
     border-radius: 15px;
     background-color: #2D2E3A;
 }
-.action:hover{
+
+.action:hover {
     background-image: url("../images/blackpanther-moviesapp.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
     cursor: pointer;
 }
-.comedy:hover{
+
+.comedy:hover {
     background-image: url("../images/a-bugs-life.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
     cursor: pointer;
 }
-.thriller:hover{
+
+.thriller:hover {
     background-image: url("../images/kingsman.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
     cursor: pointer;
 }
-.drama:hover{
+
+.drama:hover {
     background-image: url("../images/hidden-figures.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
     cursor: pointer;
 }
-.sci-fi:hover{
+
+.sci-fi:hover {
     background-image: url("../images/interstellar.gif");
     background-size: cover;
     width: 100%;
     height: 100vh;
     cursor: pointer;
 }
-.catalog-title{
+
+.catalog-title {
     border-bottom: 1px solid white;
 }
-.catalog-row-height{
+.catalog-font-size{
+    font-size: 30px;
+}
+.catalog-row-height {
     height: 65px;
     margin: 130px;
 }
-.content{
+
+.content {
     display: none;
     flex-wrap: wrap;
 }
+
 .movie-card {
     max-width: 200px;
     /*border: 1px solid #000;*/
@@ -135,14 +203,42 @@ body{
     flex-direction: column;
     gap: 10px;
 }
+
 .catalog-img-wrapper img {
     height: 300px;
     object-fit: cover;
     width: 100%;
 }
+
 .card-bottom {
-    display:flex;
+    display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 0 10px 10px 10px;
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    opacity: .9;
+    background-color: #1e2033;
+    z-index: 9999;
+    transition: all 0.3s ease-in-out;
+}
+.overlay.show {
+    right: -500px;
+}
+.form-container {
+    position: absolute;
+    top: 50%;
+    left: 35%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+}
+form{
+    color: black;
 }
